syntax = "proto3";

package user;

option go_package = "/grpc_user";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
  string user_uuid = 1;
  string auth_sub = 2;
  string handle = 3;
  string screen_name = 4;
  string bio = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  Role role = 8;
}

// Follow message definition
message Follow {
  string uuid = 1;
  string follower_id = 2;
  string followee_id = 3;
  google.protobuf.Timestamp created_at = 4;
}

enum Role {
  USER = 0;
  ADMIN = 1;
}

message ID {
  string id = 1;
}

service UserService {
    rpc CreateUser(User) returns (User);
    rpc GetUserById(ID) returns (User);
    rpc UpdateUser(User) returns (User);
    rpc DeleteUser(ID) returns (google.protobuf.Empty);

    rpc FollowUser(Follow) returns (Follow);
    rpc GetFollowById(ID) returns (Follow);
    rpc DeleteFollow(ID) returns (google.protobuf.Empty);
}